<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:background="@color/white"
    tools:context=".fragments.HelpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:fontFamily="@font/redhatdisplay_bold"
        android:text="FAQs" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corners"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/dblue"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text1"/>

            <TextView
                android:id="@+id/txtv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/black"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text2"/>
            <TextView
                android:id="@+id/txtv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/dblue"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text3"/>
            <TextView
                android:id="@+id/txtv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/black"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text4"/>
            <TextView
                android:id="@+id/txtv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/dblue"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text5"/>
            <TextView
                android:id="@+id/txtv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/black"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text6"/>
            <TextView
                android:id="@+id/txtv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/dblue"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text7"/>
            <TextView
                android:id="@+id/txtv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/black"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text8"/>
            <TextView
                android:id="@+id/txtv9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/dblue"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text9"/>
            <TextView
                android:id="@+id/txtv10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/blue"
                android:padding="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:textColor="@color/black"
                android:fontFamily="@font/redhatdisplay_medium"
                android:text="@string/help_text10"/>
        </LinearLayout>


    </ScrollView>



</FrameLayout>